# MultimodalWebAgent

./: .env example  .gitignore  Dockerfile  README.md  build.sh  package.json  pyproject.toml  requirements.txt  vercel.json  vnc_auto.html
coding/: amazon_laptop_search.py
src/autogen_config/: GetConfig.py
src/autogen_configuration/: autogen_config.py
src/autogen_configuration/utils/: oai_config_list.json
src/configs/logging/: color_formatter.py  logging_config.json  logging_config.py
src/create_oai_agent/: OaiAgent.py  ToolDefinitionFactory.py  oai_agent_creator.py  test.py  tool_definition.py  tool_definition_factory.py  tool_parameters.py
src/create_oai_agent/tool_definitions/: tool_definitions.json
src/create_oai_agent/utils/: oai_instructions.json  oai_instructions.py
src/data/: assistant_id.json
src/experiments/agent_subclass/: groupchat.py  multimodal_websurfer.py  test.py  test_af.py  web_surfer.py
src/experiments/axtree/: axtree.py  base_af.py  test_af.py
src/experiments/dropdown/: mark_page_dropdown.js  test.py
src/experiments/groupchat/: create_agents.py  simple_groupchat.py
src/experiments/markdown/: markdown_experiments.py
src/oai_agent/: oai_agent.py  run.py  test.py
src/oai_agent/utils/: create_oai_agent.py  load_assistant_id.py  prompt.py
src/tests/: test_autogen_config.py  test_logging_config.py  test_webdriver.py
src/tools/: analyze_content.py  click_element.py  go_back.py  input_text.py  jump_to_search_engine.py  read_url.py  save_to_file.py  scroll.py  test.py  wait.py
src/webdriver/: test.py  webdriver.py
(+15 files in other folders)
